--- a/index.html
+++ b/index.html
@@ -219,10 +219,14 @@
         </li>
     </ul>
 
+    <h3>greeting: </h3>
+    <pre id="greeting"></pre>
     <h3>Init Data: </h3>
     <pre id="initData"></pre>
     <h3>Init Data (unsafe): </h3>
     <pre id="initDataUnsafe"></pre>
+    <h3>theme Data: </h3>
+    <pre id="themeData"></pre>
 </section>
 
 <script type="application/javascript">
@@ -230,6 +234,9 @@
 
     const initData = Telegram.WebApp.initData || '';
     const initDataUnsafe = Telegram.WebApp.initDataUnsafe || {};
+    // verify initData at backend:
+    // secret_key = HMAC_SHA256(<bot_token>, "WebAppData")
+    // if (hex(HMAC_SHA256(data_check_string, secret_key)) == hash) 
 
     document.querySelector('#greeting').innerHTML = `Hi, ${initDataUnsafe.user.first_name}!`;
     document.querySelector('#initData').innerHTML = JSON.stringify(initData, null, 2);
